modify cmdb models

--- a/templates/base-static.html
+++ b/templates/base-static.html
@@ -8,7 +8,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>SandBoxMP</title>
+  <title>cmdb</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'plugins/font-awesome/css/font-awesome.min.css' %}">
@@ -50,9 +50,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <i class="menu-icon fa fa-birthday-cake bg-red"></i>
 
               <div class="menu-info">
-                <h4 class="control-sidebar-subheading">SandBox</h4>
+                <h4 class="control-sidebar-subheading">CMDB</h4>
 
-                <p>沙盒运维管理平台</p>
+                <p>内部资产管理系统</p>
               </div>
             </a>
           </li>
@@ -76,7 +76,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <!-- Settings tab content -->
       <div class="tab-pane" id="control-sidebar-settings-tab">
         <form method="post">
-          <h3 class="control-sidebar-heading">江苏沙盒科技</h3>
+          <h3 class="control-sidebar-heading"></h3>
 
           <div class="form-group">
             <p>
