--- a/templates/head-footer.html
+++ b/templates/head-footer.html
@@ -8,9 +8,9 @@
         <!-- Logo -->
         <a href="#" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>SMP</b></span>
+            <span class="logo-mini"><b>CMDB</b></span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>SandboxMP</b></span>
+            <span class="logo-lg"><b>CMDB</b></span>
         </a>
 
         <!-- Header Navbar -->
@@ -109,10 +109,10 @@
     <footer class="main-footer text-center">
         <strong>
 
-              Copyright © 2016-2017 沙盒科技
+              Copyright © 2016-2017
 
         </strong>
-        技术支持：<a href="https://zhuanlan.zhihu.com/sandbox" target="_blank">RobbieHan</a>
+        技术支持：<a href="#" target="_blank">RobbieHan</a>
     </footer>
 
 {% endblock %}
