--- a/templates/cmdb/code.html
+++ b/templates/cmdb/code.html
@@ -232,7 +232,7 @@
                             oDataTable.ajax.reload();
                         } else {
                             //alert(msg.message);
-                            layer.alert("操作失败", {icon: 2});
+                            layer.alert("没有权限", {icon: 2});
                         }
                         return;
                     }
@@ -261,7 +261,7 @@
                             oDataTable.ajax.reload();
                         } else {
                             //alert(msg.message);
-                            layer.alert('删除失败', {icon: 2});
+                            layer.alert('没有权限', {icon: 2});
                         }
                         return;
                     }
