--- a/templates/cmdb/network_asset.html
+++ b/templates/cmdb/network_asset.html
@@ -35,12 +35,12 @@
                 <div class="pull-right">
                     <form class="form-inline" id="queryForm">
                         <div class="form-group searchArea margin-r-5 margin-top-5">
-                            <label>机柜编号：</label>
-                            <input type="text" name="number" class="form-control inputText" id="number">
+                            <label>资产名称：</label>
+                            <input type="text" name="name" class="form-control inputText" id="name">
                         </div>
                         <div class="form-group searchArea margin-r-5 margin-top-5">
-                            <label>机柜位置：</label>
-                            <input type="text" name="position" class="form-control inputText" id="position">
+                            <label>IP地址：</label>
+                            <input type="text" name="ip_address" class="form-control inputText" id="ip_address">
                         </div>
                       <button type="button" id="btnSearch" class="btn btn-default">
                         <i class="glyphicon glyphicon-search"></i>查询
@@ -55,9 +55,13 @@
                     <tr valign="middle">
                         <th><input type="checkbox" id="checkAll"></th>
                         <th>ID</th>
-                        <th>机柜编号</th>
-                        <th>机柜位置</th>
-                        <th>备注信息</th>
+                        <th>资产名称</th>
+                        <th>IP地址</th>
+                        <th>管理地址</th>
+                        <th>服务商</th>
+                        <th>购买日期</th>
+                        <th>到期时间</th>
+                        <th>状态</th>
                         <th>操作</th>
                     </tr>
                     </thead>
@@ -87,7 +91,7 @@
     // 菜单选中高亮
     $(function () {
         $('#CMDB-EAM').addClass('active');
-        $('#CMDB-EAM-CABINET').addClass('active');
+        $('#CMDB-EAM-NETWORK_ASSET').addClass('active');
 
     });
 
@@ -102,10 +106,10 @@
 
                 {
                     ajax: {
-                        "url": "{% url 'cmdb:eam-cabinet-list' %}",
+                        "url": "{% url 'cmdb:eam-network_asset-list' %}",
                         "data": function (d) {
-                                d.number = $("#number").val();
-                                d.position = $("#position").val();
+                                d.number = $("#name").val();
+                                d.position = $("#ip_address").val();
                             }
                     },
                     columns: [
@@ -115,16 +119,42 @@
                             width: "5%",
                         },
                         {
-                            data: "number",
+                            data: "name",
                             //width : "20%",
                         },
                         {
-                            data: "position",
+                            data: "ip_address",
                             //width : "20%",
                         },
                         {
-                            data: "desc",
+                            data: "management",
                             //width : "20%",
+                        },
+                        {
+                            data: "provider__firm",
+                            //width : "20%",
+                        },
+                        {
+                            data: "buyDate",
+                            //width : "20%",
+                        },
+                        {
+                            data: "warrantyDate",
+                            //width : "20%",
+                        },
+                        {
+                            data: "state",
+                            render : function(data, type, row, meta) {
+                                if (data=true) {
+                                    var ret="<button class='btn btn-success btn-xs'>在用</button>";
+                                    return ret;
+                                }if (data=false) {
+                                    var ret="<button class='btn btn-warning btn-xs'>停用</button>";
+                                    return ret;
+
+                                }
+                            }
+
                         },
                         {
                             data: "id",
@@ -156,8 +186,8 @@
             title: '新增',
             shadeClose: false,
             maxmin: true,
-            area: ['800px', '400px'],
-            content: "{% url 'cmdb:eam-cabinet-create' %}",
+            area: ['800px', '550px'],
+            content: "{% url 'cmdb:eam-network_asset-create' %}",
             end: function () {
                 //关闭时做的事情
                 oDataTable.ajax.reload();
@@ -172,8 +202,8 @@
             title: '编辑',
             shadeClose: false,
             maxmin: true,
-            area: ['800px', '400px'],
-            content: ["{% url 'cmdb:eam-cabinet-update' %}" + '?id=' + id, 'no'],
+            area: ['800px', '550px'],
+            content: ["{% url 'cmdb:eam-network_asset-update' %}" + '?id=' + id, 'no'],
             end: function () {
                 oDataTable.ajax.reload();
             }
@@ -215,7 +245,7 @@
                 layer.close(index);
                 $.ajax({
                     type: "POST",
-                    url: "{% url 'cmdb:eam-cabinet-delete' %}",
+                    url: "{% url 'cmdb:eam-network_asset-delete' %}",
                     data: {"id": sId, csrfmiddlewaretoken: '{{ csrf_token }}'},
                     cache: false,
                     success: function (msg) {
@@ -244,7 +274,7 @@
                 layer.close(index);
                 $.ajax({
                     type: "POST",
-                    url: "{% url 'cmdb:eam-cabinet-delete' %}",
+                    url: "{% url 'cmdb:eam-network_asset-delete' %}",
                     data: {"id": id, csrfmiddlewaretoken: '{{ csrf_token }}'},
                     cache: false,
                     success: function (msg) {
