--- a/templates/cmdb/domainname.html
+++ b/templates/cmdb/domainname.html
@@ -32,21 +32,65 @@
                         <i class="glyphicon glyphicon-trash"></i>删除
                     </button>
                 </div>
-                <div class="pull-right">
-                    <form class="form-inline" id="queryForm">
-                        <div class="form-group searchArea margin-r-5 margin-top-5">
-                            <label>资产名称：</label>
-                            <input type="text" name="name" class="form-control inputText" id="name">
-                        </div>
-                        <div class="form-group searchArea margin-r-5 margin-top-5">
-                            <label>IP地址：</label>
-                            <input type="text" name="ip_address" class="form-control inputText" id="ip_address">
-                        </div>
-                      <button type="button" id="btnSearch" class="btn btn-default">
-                        <i class="glyphicon glyphicon-search"></i>查询
-                      </button>
-                    </form>
-                </div>
+            </div>
+            <div class="box-header">
+                <form class="form-inline" id="queryForm">
+                    <div class="form-group searchArea margin-r-5 margin-top-5">
+                        <label>主机名：</label>
+                        <input type="text" name="sys_hostname" class="form-control inputText" id="sys_hostname">
+                    </div>
+                    <div class="form-group searchArea margin-r-5 margin-top-5">
+                        <label>设备地址：</label>
+                        <input type="text" name="hostname" class="form-control inputText" id="hostname">
+                    </div>
+                    <div class="form-group searchArea margin-r-5 margin-top-5">
+                        <label>网络类型：</label>
+                        <select class="form-control inputText select2" name="network_type" id="network_type">
+                          <option></option>
+                          {% for code in all_code %}
+                              {% ifequal code.parent.key 'NETWORK_TYPE' %}
+                                <option value="{{ code.id }}">{{ code.value }}</option>
+                              {% endifequal %}
+                          {% endfor %}
+                         </select>
+                    </div>
+                    <div class="form-group searchArea margin-r-5 margin-top-5">
+                        <label>服务类型：</label>
+                        <select class="form-control inputText select2" name="service_type" , id="service_type">
+                          <option></option>
+                          {% for code in all_code %}
+                              {% if code.parent.key == 'SERVICE_TYPE' %}
+                                <option value="{{ code.id }}">{{ code.value }}</option>
+                              {% endif %}
+                          {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group searchArea margin-r-5 margin-top-5">
+                        <label>所属项目：</label>
+                        <select class="form-control inputText select2" name="operation_type" , id="operation_type">
+                          <option></option>
+                          {% for code in all_code %}
+                              {% if code.parent.key == 'OPERATION_TYPE' %}
+                                <option value="{{ code.id }}">{{ code.value }}</option>
+                              {% endif %}
+                          {% endfor %}
+                        </select>
+                    </div>
+                    <div class="form-group searchArea margin-r-5 margin-top-5">
+                        <label>机柜信息：</label>
+                        <select class="form-control inputText select2" name="dev_cabinet" , id="dev_cabinet">
+                          <option></option>
+                          {% for cabinet in all_cabinet %}
+
+                                <option value="{{ cabinet.id }}">{{ cabinet.number }}</option>
+
+                          {% endfor %}
+                        </select>
+                    </div>
+                  <button type="button" id="btnSearch" class="btn btn-default">
+                    <i class="glyphicon glyphicon-search"></i>查询
+                  </button>
+                </form>
             </div>
 
             <div class="box-body">
@@ -55,13 +99,13 @@
                     <tr valign="middle">
                         <th><input type="checkbox" id="checkAll"></th>
                         <th>ID</th>
-                        <th>资产名称</th>
+                        <th>主机名</th>
                         <th>IP地址</th>
-                        <th>管理地址</th>
-                        <th>服务商</th>
-                        <th>购买日期</th>
-                        <th>到期时间</th>
-                        <th>状态</th>
+                        <th>服务类型</th>
+                        <th>所属项目</th>
+                        <th>配置信息</th>
+                        <th>机柜信息</th>
+                        <th>网络类型</th>
                         <th>操作</th>
                     </tr>
                     </thead>
@@ -91,7 +135,7 @@
     // 菜单选中高亮
     $(function () {
         $('#CMDB-EAM').addClass('active');
-        $('#CMDB-EAM-NETWORK_ASSET').addClass('active');
+        $('#CMDB-EAM-DEVICE').addClass('active');
 
     });
 
@@ -106,64 +150,53 @@
 
                 {
                     ajax: {
-                        "url": "{% url 'cmdb:eam-network_asset-list' %}",
+                        "url": "{% url 'cmdb:eam-device-list' %}",
                         "data": function (d) {
-                                d.number = $("#name").val();
-                                d.position = $("#ip_address").val();
+                                d.sys_hostname = $("#sys_hostname").val();
+                                d.hostname = $("#hostname").val();
+                                d.network_type = $("#network_type").val();
+                                d.service_type = $("#service_type").val();
+                                d.operation_type = $("#operation_type").val();
+                                d.dev_cabinet = $("#dev_cabinet").val();
                             }
                     },
                     columns: [
                         DATATABLES_CONSTANT.DATA_TABLES.COLUMN.CHECKBOX,
+
                         {
                             data: "id",
-                            width: "5%",
                         },
                         {
-                            data: "name",
-                            //width : "20%",
+                            data: "sys_hostname",
                         },
                         {
-                            data: "ip_address",
-                            //width : "20%",
+                            data: "hostname",
                         },
                         {
-                            data: "management",
-                            //width : "20%",
+                            data: "service_type",
                         },
                         {
-                            data: "provider__firm",
-                            //width : "20%",
+                            data: "operation_type",
                         },
                         {
-                            data: "buyDate",
-                            //width : "20%",
+                            data: "config",
                         },
                         {
-                            data: "warrantyDate",
-                            //width : "20%",
+                            data: "dev_cabinet",
                         },
                         {
-                            data: "state",
-                            render : function(data, type, row, meta) {
-                                if (data==1) {
-                                    var ret="<button class='btn btn-success btn-xs'>在用</button>";
-                                    return ret;
-                                }if (data==0) {
-                                    var ret="<button class='btn btn-warning btn-xs'>停用</button>";
-                                    return ret;
-
-                                }
-                            }
-
+                            data: "network_type",
                         },
                         {
                             data: "id",
-                            width: "10%",
                             bSortable: "false",
                             render: function (data, type, row, meta) {
-                                var ret = "";
-                                var ret = "<button title='详情-修改' onclick='doUpdate("
+                                var ret = "<button title='详情' onclick='doDetail("
+                                    + data + ")'><i class='glyphicon glyphicon-list-alt'></i></button>";
+                                ret = ret + "<button title='修改' onclick='doUpdate("
                                     + data + ")'><i class='glyphicon glyphicon-pencil'></i></button>";
+                                ret = ret + "<button title='认证管理' onclick='doDevice2Connection("
+                                    + data + ")'><i class='glyphicon glyphicon-user'></i></button>";
                                 ret = ret + "<button title='删除' onclick='doDelete("
                                     + data + ")'><i class='glyphicon glyphicon-trash'></i></button>";
                                 return ret;
@@ -177,37 +210,39 @@
 
     // 刷新数据
     $("#btnRefresh").click(function () {
-        oDataTable.ajax.reload();
+        window.location.reload();
     });
     //新建数据
     $("#btnCreate").click(function () {
-        layer.open({
+        var div=layer.open({
             type: 2,
             title: '新增',
             shadeClose: false,
             maxmin: true,
-            area: ['800px', '550px'],
-            content: "{% url 'cmdb:eam-network_asset-create' %}",
+            area: ['800px', '400px'],
+            content: "{% url 'cmdb:eam-device-create' %}",
             end: function () {
                 //关闭时做的事情
                 oDataTable.ajax.reload();
             }
         });
+        layer.full(div )
     });
 
     //修改数据
     function doUpdate(id) {
-        layer.open({
+        var div=layer.open({
             type: 2,
             title: '编辑',
             shadeClose: false,
             maxmin: true,
-            area: ['800px', '550px'],
-            content: ["{% url 'cmdb:eam-network_asset-update' %}" + '?id=' + id, 'no'],
+            area: ['800px', '400px'],
+            content: ["{% url 'cmdb:eam-device-update' %}" + '?id=' + id, 'no'],
             end: function () {
                 oDataTable.ajax.reload();
             }
         });
+        layer.full(div )
     }
 
     //checkbox全选
@@ -245,7 +280,7 @@
                 layer.close(index);
                 $.ajax({
                     type: "POST",
-                    url: "{% url 'cmdb:eam-network_asset-delete' %}",
+                    url: "{% url 'cmdb:eam-device-delete' %}",
                     data: {"id": sId, csrfmiddlewaretoken: '{{ csrf_token }}'},
                     cache: false,
                     success: function (msg) {
@@ -254,7 +289,7 @@
                             oDataTable.ajax.reload();
                         } else {
                             //alert(msg.message);
-                            layer.alert("没有权限", {icon: 2});
+                            layer.alert("操作失败", {icon: 2});
                         }
                         return;
                     }
@@ -274,7 +309,7 @@
                 layer.close(index);
                 $.ajax({
                     type: "POST",
-                    url: "{% url 'cmdb:eam-network_asset-delete' %}",
+                    url: "{% url 'cmdb:eam-device-delete' %}",
                     data: {"id": id, csrfmiddlewaretoken: '{{ csrf_token }}'},
                     cache: false,
                     success: function (msg) {
@@ -283,7 +318,7 @@
                             oDataTable.ajax.reload();
                         } else {
                             //alert(msg.message);
-                            layer.alert('没有权限', {icon: 2});
+                            layer.alert('删除失败', {icon: 2});
                         }
                         return;
                     }
@@ -302,5 +337,23 @@
         oDataTable.ajax.reload();
     });
 
+
+    function doDevice2Connection(id) {
+          layer.open({
+            type: 2,
+            title: '认证管理',
+            shadeClose: false,
+            maxmin: true,
+            area: ['800px', '400px'],
+            content: ["{% url 'cmdb:eam-device-device2connection' %}" + '?id=' + id, 'no'],
+            end: function () {
+                oDataTable.ajax.reload();
+            }
+        });
+        }
+
+    function doDetail(id){
+        window.location.href="{% url 'cmdb:eam-device-detail' %}?id="+id;
+    }
 </script>
 {% endblock %}
